--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -11,8 +11,9 @@
     <PackageVersion Include="Uno.WinUI" Version="5.0.0-dev.1732" />
     <PackageVersion Include="Uno.WinUI.Lottie" Version="5.0.0-dev.1732" />
     <PackageVersion Include="Uno.WinUI.RemoteControl" Version="5.0.0-dev.1732" />
-	  <PackageVersion Include="Syncfusion.Maui.Core" version="22.1.34" />
-	  <PackageVersion Include="Syncfusion.Maui.Charts" version="22.1.34" />
-	  <PackageVersion Include="Syncfusion.Maui.TabView" version="22.1.34" />
+	  <PackageVersion Include="Syncfusion.Maui.Core" version="22.2.9" />
+	  <PackageVersion Include="Syncfusion.Maui.Charts" version="22.2.9" />
+	  <PackageVersion Include="Syncfusion.Maui.TabView" version="22.2.9" />
+	  <PackageVersion Include="Syncfusion.Maui.DataGrid" version="22.2.9" />
   </ItemGroup>
 </Project>
