--- a/SyncFusionMauiBlankApp.MauiControls/SyncFusionMauiBlankApp.MauiControls.csproj
+++ b/SyncFusionMauiBlankApp.MauiControls/SyncFusionMauiBlankApp.MauiControls.csproj
@@ -22,5 +22,6 @@
 		<PackageReference Include="Syncfusion.Maui.Core" />
 		<PackageReference Include="Syncfusion.Maui.Charts" />
 		<PackageReference Include="Syncfusion.Maui.TabView" />
+		<PackageReference Include="Syncfusion.Maui.DataGrid" />
 	</ItemGroup>
 </Project>
